# Steering-behaviours-group-project

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  console.cpp  core.cpp  main.cpp  mainConfig.h  mainConfig.h.in
src/3D/: camera.cpp  camera.hpp  shader.cpp  shader.hpp
src/3D/shaders/: basic.frag  basic.vert  bound.frag
src/core/: GUI.hpp  boid.cpp  boid.hpp  brain.cpp  brain.hpp  brainTypes.hpp  world.cpp  world.hpp
